2006-06-12  Raif S. Naffah  <raif@swiftdsl.com.au>

	* doc/tools.texinfo: Replaced original author with "The GNU Classpath Team".

2006-06-12  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/javax/security/auth/login/ConfigFileParser.java (validateClassName):
	Use String.charAt().

2006-06-11  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* doc/tools.texinfo
	(Applet Tools): New chapter.
	(appletviewer Tool): New section.
	(gcjwebplugin): New section.

2006-06-11  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GdkPixbufDecoder.java (streamImage):
	Takes GdkPixbufWriter.
	(GdkPixbufWriter): Implements Runnable.
	(write(IIOMetadata,IIOImage,ImageWriteParam)): Start Thread for
	data processing.
	(DATADONE): New static final field.
	(data): New field.
	(write(byte[])): New method.
	(run): Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c
	(Java_gnu_java_awt_peer_gtk_GdkPixbufDecoder_initStaticState):
	Get dataOutputWriteID from writeClass.
	(stream_save_request): Change stream field to writer.
	(save_to_stream): Remove FIXME, call writer.
	(Java_gnu_java_awt_peer_gtk_GdkPixbufDecoder_streamImage):
	Store writer.

2006-06-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS:
	Mention new VM interface and use of properties.
	* doc/vmintegration.texinfo:
	Update with new gnu.java.lang.management section.
	* gnu/java/lang/management/RuntimeMXBeanImpl.java:
	New file.
	* java/lang/management/ManagementFactory.java:
	(getRuntimeMXBean()): Implemented.
	* vm/reference/gnu/java/lang/management/RuntimeMXBeanImpl.java:
	New VM interface file.
	
2006-06-11  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/26065
	* gnu/javax/security/auth/login/GnuConfiguration.java: Condition all trace/
	debug code based on Configuration.DEBUG.
	Use logger instead of STDOUT and ot STDERR.
	* gnu/javax/security/auth/login/ConfigFileParser.java: Likewise.
	* gnu/javax/crypto/sasl/SaslOutputStream.java: Likewise.