@@ -1,3 +1,8 @@
+2006-06-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/management/ManagementPermission.java:
+	New file.
+	
 2006-06-12  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* doc/tools.texinfo: Replaced original author with "The GNU Classpath Team".
